fix header spacing

--- a/_sass/partials/_home.scss
+++ b/_sass/partials/_home.scss
@@ -4,6 +4,7 @@ HOME PAGE LAYOUT
 
 .post-card--featured {
 	max-width: calc(100% - 2rem);
+	margin-top: 2rem;
 	margin-left: 1rem;
 	margin-right: 1rem;
 
